<resources>
    <string name="app_name">Myzone</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">注册</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">无效用户名！</string>
    <string name="invalid_password">密码必须大于5个字符！</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="content_frame"></string>
    <string name="my_page_button">  我的页面  </string>
    <string name="main_button">  中心  </string>
    <string name="home_button">  主菜单  </string>
    <string name="home_text">这是一个页面</string>
    <string name="main_fragment">这是个人中心页面</string>
    <string name="my_page_fragment_text">这是我的页面</string>
    <string name="item_text">这些是项目</string>
    <string name="todo">TODO</string>
    <string name="exit">返回</string>
    <string name="top">顶</string>
    <string name="send_comment">评</string>
    <string name="comment_button">评</string>
    <string name="share_button">转</string>
    <string name="image_title">image_title</string>
    <string name="loginId">1</string>
    <string name="password">1234567</string>
    <string name="null_string"></string>
    <string name="edit">说说撰写</string>
    <string name="edit_your_msg">在此发表你的说说</string>
    <string name="send_button">发送</string>
</resources>