<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    tools:context=".main_page">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1700BCD4"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/home_button"
            style="@style/RadioGroupButtonStyle2"
            android:text="@string/home_button" />

        <RadioButton
            android:id="@+id/send_button"
            style="@style/RadioGroupButtonStyle2"
            android:text="@string/edit" />

        <RadioButton
            style="@style/RadioGroupButtonStyle2"
            android:id="@+id/space_button"
            android:text="@string/main_button" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>