<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_bg"
    android:orientation="vertical"
    android:elevation="6dp">


    <LinearLayout
        android:id="@+id/inner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/head_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/item_margin"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/todo"
                android:elevation="5dp"
                app:srcCompat="@drawable/logoko"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/displayname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin"
                android:layout_marginTop="10dp"
                android:text="@string/null_string"
                android:elevation="10dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/item_view"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/item_text"
            android:elevation="1dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/backgroundcolor"
                android:elevation="6dp"/>

            <TextView
                android:id="@+id/contentid"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/null_string"
                android:elevation="6dp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/null_string" />

        <Button
            android:id="@+id/top"
            style="@style/ItemButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/like"/>

        <Button
            android:id="@+id/comment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/item_margin"
            android:layout_marginTop="5dp"
            style="@style/ItemButtonStyle"
            android:background="@drawable/comment"/>

        <Button
            android:id="@+id/share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            style="@style/ItemButtonStyle"
            android:background="@drawable/share"/>

    </LinearLayout>


</LinearLayout>
